--- a/AngularApp/src/app/main/menu-restaurant/menu-restaurant.component.html
+++ b/AngularApp/src/app/main/menu-restaurant/menu-restaurant.component.html
@@ -106,7 +106,7 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <img class="card-img-top" src="{{imagePlate}}" width="100px" data-holder-rendered="true"> 
+          <h5 class="modal-title">Nuevo platillo</h5>  
         </div>
         <div class="modal-body">
             <div class="form-group row"> 
