--- a/AngularApp/src/app/main/orders/approved/approved.component.html
+++ b/AngularApp/src/app/main/orders/approved/approved.component.html
@@ -20,7 +20,8 @@
         <td *ngIf="order.ubicacion._latitude == undefined && order.ubicacion._longitude == undefined">
           Recoger aquí</td>
         <td *ngIf="order.ubicacion._latitude != undefined && order.ubicacion._longitude != undefined">
-          {{order.ubicacion._latitude}}°, {{order.ubicacion._longitude}}°</td>
+          <button (click)="openMapModal(order.ubicacion._latitude, order.ubicacion._longitude)">Abrir ubicación</button>  
+        </td>
         <td>{{order.entrega}}</td>
         <td style="text-align: center;vertical-align: middle">
           <button class="btn-finish">
@@ -62,6 +63,22 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-danger" data-dismiss="modal">Aceptar</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- open map modal -->
+<div class="modal" id="modalMap" tabindex="-1" role="dialog">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Ubicación del cliente</h5>
+      </div>
+      <div class="modal-body">
+        <div #gmap style="width:100%;height:400px"></div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-dismiss="modal">Volver</button>
       </div>
     </div>
   </div>
