--- a/AngularApp/src/app/main/orders/approved/approved.component.html
+++ b/AngularApp/src/app/main/orders/approved/approved.component.html
@@ -20,11 +20,14 @@
         <td *ngIf="order.ubicacion._latitude == undefined && order.ubicacion._longitude == undefined">
           Recoger aquí</td>
         <td *ngIf="order.ubicacion._latitude != undefined && order.ubicacion._longitude != undefined">
-          <button (click)="openMapModal(order.ubicacion._latitude, order.ubicacion._longitude)">Abrir ubicación</button>  
+          <button (click)="openMapModal(order.ubicacion._latitude, order.ubicacion._longitude)"
+          class="btn-open-map" ngbTooltip="Abrir en mapa"><i class="material-icons">
+            open_in_new
+            </i></button>  
         </td>
         <td>{{order.entrega}}</td>
         <td style="text-align: center;vertical-align: middle">
-          <button class="btn-finish">
+          <button class="btn-finish" ngbTooltip="Finalizar pedido">
             <i style="font-size: 12px;" class="material-icons" (click)="isFinished(order.id)">
               done
             </i>
@@ -75,10 +78,12 @@
         <h5 class="modal-title">Ubicación del cliente</h5>
       </div>
       <div class="modal-body">
-        <div #gmap style="width:100%;height:400px"></div>
+        <agm-map [latitude]="lat" [longitude]="lng" [zoom]="15">
+          <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+        </agm-map>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-danger" data-dismiss="modal">Volver</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Volver</button>
       </div>
     </div>
   </div>
