--- a/AngularApp/src/app/main/orders/orders.component.html
+++ b/AngularApp/src/app/main/orders/orders.component.html
@@ -61,6 +61,24 @@
     </div>
   </div>
 </div>
+<!-- open map modal -->
+<div class="modal" id="modalMap" tabindex="-1" role="dialog">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Ubicación del cliente</h5>
+      </div>
+      <div class="modal-body">
+        <agm-map [latitude]="lat" [longitude]="lng" [zoom]="15">
+          <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+        </agm-map>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Volver</button>
+      </div>
+    </div>
+  </div>
+</div>
 <!-- expired modal -->
 <div class="modal" id="modalExpired" tabindex="-1" role="dialog">
   <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
@@ -86,13 +104,15 @@
                 <td>{{order.fecha | date:'shortTime'}}</td>
                 <td>{{order.email}}</td>
                 <td>{{order.precio}}</td>
-                <td>{{order.estado}}</td>
                 <td>{{order.categoria}}</td>
                 <td *ngIf="order.ubicacion._latitude == undefined && order.ubicacion._longitude == undefined">
                   Recoger aquí</td>
                 <td *ngIf="order.ubicacion._latitude != undefined && order.ubicacion._longitude != undefined">
-                  {{order.ubicacion._latitude}}°, {{order.ubicacion._longitude}}°</td>
-                <td>{{order.entrega}}</td>
+                    <button (click)="openMapModal(order.ubicacion._latitude, order.ubicacion._longitude)"
+                    class="btn-open-map" ngbTooltip="Abrir en mapa"><i class="material-icons">
+                      open_in_new
+                      </i></button>  
+                  </td>
               </tr>
             </tbody>
           </table>
@@ -130,14 +150,16 @@
                 <td>{{order.fecha | date:'shortTime'}}</td>
                 <td>{{order.email}}</td>
                 <td>{{order.precio}}</td>
-                <td>{{order.estado}}</td>
                 <td>{{order.categoria}}</td>
                 <td *ngIf="order.ubicacion._latitude == undefined && order.ubicacion._longitude == undefined">
                   Recoger aquí</td>
                 <td *ngIf="order.ubicacion._latitude != undefined && order.ubicacion._longitude != undefined">
-                  {{order.ubicacion._latitude}}°, {{order.ubicacion._longitude}}°</td>
-                <td>{{order.entrega}}</td>
-                <td>Sin producto</td>
+                    <button (click)="openMapModal(order.ubicacion._latitude, order.ubicacion._longitude)"
+                    class="btn-open-map" ngbTooltip="Abrir en mapa"><i class="material-icons">
+                      open_in_new
+                      </i></button>  
+                  </td>
+                <td>{{order.estado.razon}}</td>
               </tr>
             </tbody>
           </table>
@@ -175,13 +197,15 @@
                   <td>{{order.fecha | date:'shortTime'}}</td>
                   <td>{{order.email}}</td>
                   <td>{{order.precio}}</td>
-                  <td>{{order.estado}}</td>
                   <td>{{order.categoria}}</td>
                   <td *ngIf="order.ubicacion._latitude == undefined && order.ubicacion._longitude == undefined">
                     Recoger aquí</td>
                   <td *ngIf="order.ubicacion._latitude != undefined && order.ubicacion._longitude != undefined">
-                    {{order.ubicacion._latitude}}°, {{order.ubicacion._longitude}}°</td>
-                  <td>{{order.entrega}}</td>
+                      <button (click)="openMapModal(order.ubicacion._latitude, order.ubicacion._longitude)"
+                      class="btn-open-map" ngbTooltip="Abrir en mapa"><i class="material-icons">
+                        open_in_new
+                        </i></button>  
+                    </td>
                 </tr>
               </tbody>
             </table>
