--- a/AngularApp/src/app/main/orders/orders.component.css
+++ b/AngularApp/src/app/main/orders/orders.component.css
@@ -34,3 +34,21 @@ ngb-pagination /deep/ .page-item .page-link {
 ngb-pagination /deep/ .page-item.disabled .page-link {
     color: gray;   
 }
+
+.center-icon-btn {
+    display: inline-block;
+    border-radius: 50%;
+}
+
+.icon {
+    display: table-cell;
+    vertical-align: middle; 
+    text-align: center;
+    text-decoration: none;
+    height: 30px;
+    width: 25px;
+}
+
+@media only screen and (max-width: 768px) {
+    
+}
