Se agregó eliminar pedidos expirados para ser implementado con el servid

--- a/AngularApp/src/app/main/menu-restaurant/menu-restaurant.component.html
+++ b/AngularApp/src/app/main/menu-restaurant/menu-restaurant.component.html
@@ -45,7 +45,7 @@
 
   <!-- modify food -->
   <div class="modal fade bd-example-modal-lg" id="modalEditFood" tabindex="-1" role="dialog">
-    <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
           <img class="card-img-top" src="{{imagePlate}}" width="100px" data-holder-rendered="true"> 
@@ -142,7 +142,7 @@
 
   <!-- add new plate -->
   <div class="modal" id="modalCreateFood" tabindex="-1" role="dialog">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title">Nuevo platillo</h5>  
