--- a/AngularApp/src/styles.css
+++ b/AngularApp/src/styles.css
@@ -37,6 +37,10 @@ body, html {
     height: 100%;
     width: 100%;
 }
+.icon-main{
+    content: url("assets/icons/logo.jpg");
+    background-color: aqua;
+}
 .opacity {
     opacity: 0.7;
 }
