--- a/AngularApp/src/app/main/menu-restaurant/menu-restaurant.component.html
+++ b/AngularApp/src/app/main/menu-restaurant/menu-restaurant.component.html
@@ -30,6 +30,9 @@
                 <div class="btn-group">
                   <button type="button" (click)="editPlatModal(plat)" class="btn btn-sm btn-danger">Editar</button>
                   <button type="button" (click)="delPlatModal(plat)" class="btn btn-sm btn-danger">Eliminar</button>
+                  <button type="button" (click)="ratePlateModal(plat)" class="btn btn-sm btn-danger"><i class="material-icons">
+                    star_rate
+                    </i></button>
                 </div>
               </div>
             </div>
