--- a/AngularApp/src/app/main/orders/approved/approved.component.html
+++ b/AngularApp/src/app/main/orders/approved/approved.component.html
@@ -47,7 +47,7 @@
         <p>{{successMessage}}</p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-danger" data-dismiss="modal">Aceptar</button>
+        <button type="button" class="btn btn-dark" data-dismiss="modal">Aceptar</button>
       </div>
     </div>
   </div>
@@ -63,7 +63,7 @@
         <p>{{failedMessage}}</p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-danger" data-dismiss="modal">Aceptar</button>
+        <button type="button" class="btn btn-warning" data-dismiss="modal">Aceptar</button>
       </div>
     </div>
   </div>
