--- a/AngularApp/src/app/main/orders/orders.component.html
+++ b/AngularApp/src/app/main/orders/orders.component.html
@@ -40,7 +40,7 @@
           <p>{{successMessage}}</p>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-info" data-dismiss="modal">Aceptar</button>
+          <button type="button" class="btn btn-dark" data-dismiss="modal">Aceptar</button>
         </div>
       </div>
     </div>
@@ -56,7 +56,7 @@
           <p>{{failedMessage}}</p>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-info" data-dismiss="modal">Aceptar</button>
+          <button type="button" class="btn btn-warning" data-dismiss="modal">Aceptar</button>
         </div>
       </div>
     </div>
