--- a/AngularApp/src/app/main/orders/pending/pending.component.html
+++ b/AngularApp/src/app/main/orders/pending/pending.component.html
@@ -72,7 +72,7 @@
         <p>{{successMessage}}</p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-danger" data-dismiss="modal">Aceptar</button>
+        <button type="button" class="btn btn-dark" data-dismiss="modal">Aceptar</button>
       </div>
     </div>
   </div>
@@ -88,7 +88,7 @@
         <p>{{failedMessage}}</p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-danger" data-dismiss="modal">Aceptar</button>
+        <button type="button" class="btn btn-warning" data-dismiss="modal">Aceptar</button>
       </div>
     </div>
   </div>
