--- a/AngularApp/src/app/main/menu-restaurant/menu-restaurant.component.html
+++ b/AngularApp/src/app/main/menu-restaurant/menu-restaurant.component.html
@@ -223,8 +223,8 @@
           <h5 class="modal-title">Votaciones</h5>
         </div>
         <div class="modal-body">
-          <h5 *ngIf="ratingList?.length == 0" style="margin-top:3%; text-align: center">No hay nada para mostrar</h5> 
-          <div *ngIf="ratingList?.length > 0" class="table-responsive">
+          <h5 *ngIf="keyUsersRatingList.length == 0" style="margin-top:3%; text-align: center">No hay nada para mostrar</h5> 
+          <div *ngIf="keyUsersRatingList.length > 0" class="table-responsive">
             <table class="table table-hover">
               <thead>
                 <tr>
@@ -232,17 +232,21 @@
                 </tr>
               </thead>
               <tbody>
-                <tr *ngFor="let plat of ratingList" scope="row">
-                  <td>plat.name</td>
-                  <td>plat.name.review</td>
-                  <td>plat.name.stars</td>
+                <tr *ngFor="let keyUser of keyUsersRatingList" scope="row">  
+                  <td>{{keyUser}}</td>
+                  <td>{{ratingList[keyUser].review}}</td>
+                  <td *ngIf="setStars(ratingList[keyUser].stars)">
+                    <a *ngFor="let item of starsList">  
+                      <i class="fa" style="color: darkgoldenrod;" [ngClass]="{'fa-star-o':item,'fa-star':!item}"></i>   
+                    </a>
+                  </td>
                 </tr>
               </tbody>
             </table>
           </div>
         </div>
         <div class="modal-footer">
-          <ngb-pagination *ngIf="ratingList?.length > 0" (click)="updatePlatesPagination($event)" [collectionSize]="totalPages" [(page)]="page" [maxSize]="3" [rotate]="true" [ellipses]="false" [boundaryLinks]="true"></ngb-pagination>
+          <!-- <ngb-pagination *ngIf="keyUsersRatingList.length > 0" (click)="updatePlatesPagination($event)" [collectionSize]="totalPagesRate" [(page)]="pageRate" [maxSize]="3" [rotate]="true" [ellipses]="false" [boundaryLinks]="true"></ngb-pagination> -->
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Atrás</button>
         </div>
       </div>
