--- a/AngularApp/src/app/main/orders/pending/pending.component.html
+++ b/AngularApp/src/app/main/orders/pending/pending.component.html
@@ -62,7 +62,7 @@
   </div>
 </div>
 <!-- confirmation modal -->
-<div class="modal" id="modalSuccess" tabindex="-1" role="dialog">
+<div class="modal" id="modalPendingSuccess" tabindex="-1" role="dialog">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -78,7 +78,7 @@
   </div>
 </div>
 <!-- failed modal -->
-<div class="modal" id="modalFailed" tabindex="-1" role="dialog">
+<div class="modal" id="modalPendingFailed" tabindex="-1" role="dialog">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -94,7 +94,7 @@
   </div>
 </div>
 <!-- open map modal -->
-<div class="modal" id="modalMap" tabindex="-1" role="dialog">
+<div class="modal" id="modalPendingMap" tabindex="-1" role="dialog">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
