Add average rate

--- a/AngularApp/src/app/main/menu-restaurant/menu-restaurant.component.html
+++ b/AngularApp/src/app/main/menu-restaurant/menu-restaurant.component.html
@@ -41,7 +41,7 @@
                   <button type="button" (click)="ratePlateModal(plat)" class="btn btn-sm btn-danger">
                     <i class="material-icons" ngbTooltip="Ver calificaciones">
                       star_rate
-                      </i>
+                      </i><span class="badge badge-pill badge-light">{{plat.rating}}</span>
                   </button>
                 </div>
               </div>
