Trabajando en vista cuenta
- se elimino restaurantes, se controla cuenta y restaurantes en una sola vista

--- a/AngularApp/src/app/main/account/account.component.html
+++ b/AngularApp/src/app/main/account/account.component.html
@@ -1,3 +1,11 @@
-<p>
-  account works!
-</p>
+<main role="main">
+  <section class="jumbotron menu" style="margin: 0%; padding: 16px 8px 32px">
+    <div class="container text-center">
+      <h5 style="margin-bottom: 6%"  class="card-title font-subtitle">Restaurantes asociados a mi cuenta</h5>
+      <div style="text-align: left">
+        <img class="img-user" src="/../assets/icons/orders_1.jpg" width="40px" alt="foto usuario">
+        <h6 class="card-title username">Kembly Quirós</h6>
+      </div> 
+    </div>
+  </section>
+</main>
