--- a/AngularApp/src/app/main/account/account.component.css
+++ b/AngularApp/src/app/main/account/account.component.css
@@ -4,9 +4,33 @@
 
 .username {
     color: white;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 16px;
 }
 
 .img-user{
     border-radius: 50%;
-    height: 35px;
+    height: 55px;
+    margin: 1%;
+}
+
+.container-user {
+    justify-content: left;
+    border: 0;
+}
+
+.center-icon-btn {
+    display: inline-block;
+    border-radius: 50%;
+}
+
+.icon {
+    display: table-cell;
+    vertical-align: middle; 
+    text-align: center;
+    text-decoration: none;
+    height: 30px;
+    width: 25px;
 }
