error en interface

--- a/AngularApp/src/app/main/menu-restaurant/menu-restaurant.component.html
+++ b/AngularApp/src/app/main/menu-restaurant/menu-restaurant.component.html
@@ -34,7 +34,7 @@
                       </i>
                   </button>
                   <button type="button" (click)="delPlatModal(plat)" class="btn btn-sm btn-danger">
-                    <i class="material-icons" ngbTooltip="Eliminar pedido">
+                    <i class="material-icons" ngbTooltip="Eliminar platillo">
                       delete
                       </i>
                   </button>
@@ -304,7 +304,9 @@
   </div>
   <!-- add plate -->
   <div style="text-align: right;">
-    <button type="button" (click)="addPlatModal()" class="btn btn-danger btn-add float"><i class="material-icons">
-      add</i></button>
+    <button type="button" (click)="addPlatModal()" class="btn btn-danger btn-add float">
+      <i class="material-icons">
+      add</i>
+    </button>
   </div>
 </main>
