--- a/AngularApp/src/app/main/account/account.component.html
+++ b/AngularApp/src/app/main/account/account.component.html
@@ -22,16 +22,149 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let rest of restaurants" scope="row" >
+        <tr *ngFor="let rest of restaurants" scope="row">
+
 
         </tr>
       </tbody>
     </table>
   </div>
-  <ngb-pagination *ngIf="restaurants?.length > 0" (click)="updateRestaurantsPagination($event)" class="col-md-12 justify-content-center" [collectionSize]="totalPages" [(page)]="page" [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true"></ngb-pagination>
-  <!-- add plate -->
-  <div style="text-align: right;">
-      <button type="button" (click)="editProfileModal()" class="btn btn-info btn-add float"><i class="material-icons">
-        add</i></button>
+  <!-- add restaurant modal -->
+<!-- modify food -->
+  <div class="modal fade bd-example-modal-lg" id="modalEdit" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <img class="card-img-top" src="{{currentRest?.nombre}}" width="100px" data-holder-rendered="true"> 
+        </div>
+        <div class="modal-body offset-md-1">
+          <div class="form-group row"> 
+            <label class="col-sm-3 col-form-label">Nombre: </label> 
+            <div class="col-sm-8"> 
+              <input type="text" [(ngModel)]="currentRest.nombre" class="form-control" id="nameP" placeholder="Nuevo nombre..."> 
+            </div> 
+          </div> 
+          <!-- <div class="form-group row"> 
+            <label class="col-sm-3 col-form-label">Descripción: </label> 
+            <div class="col-sm-8"> 
+              <textarea class="form-control" maxlength="150" [(ngModel)]="descriptionPlate" rows="4"></textarea> 
+            </div> 
+          </div> 
+          <div class="form-group row"> 
+            <label class="col-sm-3 col-form-label">Precio: </label> 
+            <div class="col-sm-8"> 
+              <div class="input-group"> 
+                <div class="input-group-prepend"> 
+                  <span class="input-group-text">₡</span> 
+                </div> 
+                <input type="text" [(ngModel)]="pricePlate" class="form-control" aria-label="Amount (to the nearest dollar)" placeholder="Nuevo precio..."> 
+                <div class="input-group-append"> 
+                  <span class="input-group-text">.00</span> 
+                </div> 
+              </div> 
+            </div> 
+          </div> 
+          <div class="form-group row">
+            <div class="col-sm-3">
+              <label class="col-form-label">Categoría: </label> 
+              <div class="form-group row">
+                <div class="form-check">
+                  <input class="form-check-input" (change)="switchCat()" type="checkbox" [value]="false" [(ngModel)]="modCat" id="lblMCat">
+                  <h6 class="form-check-label" for="lblMCat">
+                    Nueva categoría
+                  </h6>
+                </div>
+              </div>
+            </div>
+            <div *ngIf="!modCat" class="col-sm-8"> 
+              <select [(ngModel)]="categoryPlate" class="form-control opacity">
+                <option *ngFor="let cat of allCategories"
+                  [value]="cat">{{cat}}</option> 
+                </select>
+            </div> 
+            <div *ngIf="modCat" class="col-sm-8">
+              <input type="text" [(ngModel)]="categoryPlate" class="form-control" id="nameCat" placeholder="Nueva categoría..."> 
+            </div>
+          </div>
+          <div style="margin-top: 3%" class="form-group justify-content-center">
+            <button type="button" class="btn btn-outline-danger" (click)="isCollapsed = !isCollapsed"
+              [attr.aria-expanded]="isCollapsed" aria-controls="collapseExample">
+              Agregar imagen al platillo
+            </button>
+          </div>
+          <div id="collapseExample" [ngbCollapse]="isCollapsed">
+            <div class="form-group justify-content-center">
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" (change)="switchImg()" [(ngModel)]="imgOpt" name="imageOpts" id="upImg" [value]="true">
+                <label class="form-check-label" for="upImg">Subir imagen</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" (change)="switchImg()" [(ngModel)]="imgOpt" name="imageOpts" id="lnkImg" [value]="false">
+                <label class="form-check-label" for="lnkImg">Link a imagen</label>
+              </div>
+            </div>
+            <div *ngIf="!imgOpt" class="form-group row"> 
+              <div class="input-group col-sm-11">
+                <div class="input-group-prepend">
+                  <span class="input-group-text">Link </span>
+                </div>
+                <input type="text" [(ngModel)]="imagePlate" class="form-control" id="imageP" placeholder="Link nueva imagen..." required> 
+              </div>
+            </div> 
+            <div *ngIf="imgOpt" class="form-group row">
+              <div class="input-group col-sm-11">
+                <label for="imagenC">Elija una imagen de la computadora</label>
+                <input (change)="onFileChange($event)" type="file" accept=".jpg, .jpeg" class="form-control-file" id="imagenC" required>
+              </div>
+            </div>
+          </div>  -->
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button> 
+          <button type="submit" (click)="updatePlat()" data-dismiss="modal" class="btn btn-danger">Guardar</button> 
+        </div>
+      </div>
     </div>
+  </div>
+  <!-- MODALS ABOUT INFORMATION -->
+  <!-- confirmation modal -->
+  <div class="modal" id="modalSuccess" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Transacción exitosa</h5>
+        </div>
+        <div class="modal-body">
+          <p>{{successMessage}}</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-dark" data-dismiss="modal">Aceptar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- failed modal -->
+  <div class="modal" id="modalFailed" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Transacción fallida</h5>
+        </div>
+        <div class="modal-body">
+          <p>{{failedMessage}}</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-warning" data-dismiss="modal">Aceptar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <ngb-pagination *ngIf="restaurants?.length > 0" (click)="updateRestaurantsPagination($event)" class="col-md-12 justify-content-center" [collectionSize]="totalPages" [(page)]="page" [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true"></ngb-pagination>
+  <!-- add restaurant -->
+  <div style="text-align: right;">
+    <button type="button" (click)="editProfileModal()" class="btn btn-info btn-add float">
+      <i class="material-icons">
+      add</i>
+    </button>
+  </div>
 </main>
